--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
 <header class="header">
@@ -42,7 +42,7 @@
                     info@devstudio.com</a></li>
                 <li class="menu-item">
                     <a href="telto:+380961111111" class="header-contacts header-tel link">
-                        <svg class="tel-icom">
+                        <svg class="tel-icon">
                             <use href="./img/sprite-connection.svg#icon-vector"></use>
                         </svg>
                     +38 096 111 11 11</a></li>
