--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 </head>
 <body>
 <header class="header">
-    <div class="container header-container">
+
+    <div class="header-container container">
+
         <nav class="header-nav">
             <a class="header-logo link" href="./index.html">Web<span class="studio-dark">Studio</span></a>
+            
         <ul class="list menu-link">
             <li class="menu-item">
                 <a href="./index.html" class="menu-list current link">Студия</a>
@@ -29,10 +32,12 @@
                 <a href="./portfolio.html" class="menu-list link">Портфолио</a>
             </li>
             <li class="menu-item">
-                <a href="mailto:info@devstudio.com-telto:+380961111111" class="menu-list link">Контакты</a>
+                <a href="mailto:info@devstudio.com-tel:+380961111111" class="menu-list link">Контакты</a>
             </li>
         </ul>
+
         </nav>
+
             <ul class="header-contacts list">
                 <li class="menu-item">
                     <a href="mailto:info@devstudio.com" class="header-contacts header-email link">
@@ -41,7 +46,7 @@
                         </svg>
                     info@devstudio.com</a></li>
                 <li class="menu-item">
-                    <a href="telto:+380961111111" class="header-contacts header-tel link">
+                    <a href="tel:+380961111111" class="header-contacts header-tel link">
                         <svg class="tel-icon">
                             <use href="./img/sprite-connection.svg#icon-vector"></use>
                         </svg>
@@ -49,7 +54,9 @@
             </ul>
     </div>
 </header>
+
 <main>
+
 <section class="section-order order-overlay">
     <div class="container">
         <h1 class="order-text">Эффективные решения<br>
@@ -57,9 +64,11 @@
             <button  type="button" data-modal-open class="order-button order-text-button">Заказать услугу</button>
     </div>    
 </section>
+
 <section class="section">
     <div class="container">
     <h2 class="features-title">Особенности</h2>
+
         <ul class="features-list list">
             <li class="features-item">
                 <div class="features-icon-bg">
@@ -98,11 +107,14 @@
             <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul> 
+
     </div>  
 </section>
+
 <section class="section-activities">
     <div class="container">
     <h2 class="activities-title">Чем мы занимаемся</h2>
+
         <ul class="activities-list list">
             <li class="activities-item">
             <img src="./img/coding.jpg" alt="программист набирает код" width="370" height="294">
@@ -117,11 +129,14 @@
             <p class="activities-text">Дизайнерские решения</p>
             </li>
         </ul>
+
    </div> 
 </section>
+
 <section class="section section-team">
     <div class="container">
     <h2 class="team-title">Наша команда</h2>
+
     <ul class="team-list list">
         <li class="team-item">
             <img src="./img/igor-d.jpg" alt="игорь демьяненко" width="270" height="260">
@@ -292,11 +307,14 @@
             </div> 
         </li>
     </ul>
+
     </div>
 </section>
+
 <section class="section">
     <div class="container">
         <h2 class="clients-title">Постоянные клиенты</h2>
+
             <ul class="clients-list list">
                 <li class="client-item current">
                     <a href="" class="client-link">
@@ -347,11 +365,15 @@
                     </a>    
                 </li>
             </ul>
+
     </div>
 </section>
+
 </main>
+
 <footer class="footer">
     <div class="footer-container container">
+
         <div class="footer-left">
         <a href="./index.html" class="footer-logo link">Web<span class="studio-light">Studio</span></a>
             <address class="adress">
@@ -362,6 +384,7 @@
                     </ul>
             </address>
         </div> 
+
         <div class="social">
             <p class="footer-social">Присоединяйтесь</p> 
             <ul class="footer-social-list list">
@@ -399,6 +422,7 @@
                 </li>
             </ul>
         </div>
+
         <form class="form-sub" name="email" action="#">
             <p class="footer-social">Подпишитесь на рассылку</p>
             <div class="footer-sub">
@@ -421,8 +445,10 @@
                     </button>    
             </div>
         </form>
+
     </div>
 </footer>
+
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="modal-btn" data-modal-close>
