--- a/portfolio.html
+++ b/portfolio.html
@@ -19,16 +19,19 @@
 </head>
 
 <body>
+
     <header class="header">
         <div class="container header-container">
+
             <nav class="header-nav">
                 <a lang="en" class="header-logo link" href="./index.html">Web<span class="studio-dark">Studio</span></a>
                 <ul class="list menu-link">
                     <li class="menu-item"><a href="./index.html" class="menu-list link">Студия</a></li>
                     <li class="menu-item"><a href="./portfolio.html" class="menu-list current link">Портфолио</a></li>
-                    <li class="menu-item"><a href="mailto:info@devstudio.com-telto:+380961111111" class="menu-list link">Контакты</a></li>
+                    <li class="menu-item"><a href="mailto:info@devstudio.com-tel:+380961111111" class="menu-list link">Контакты</a></li>
                 </ul>
             </nav>
+
                 <ul class="header-contacts list">
                     <li class="menu-item">
                         <a href="mailto:info@devstudio.com" class="header-contacts header-email link">
@@ -39,7 +42,7 @@
                         </a>
                     </li>
                     <li class="menu-item">
-                        <a href="telto:+380961111111" class="header-contacts header-tel link">
+                        <a href="tel:+380961111111" class="header-contacts header-tel link">
                             <svg class="tel-icon">
                                 <use href="./img/sprite-connection.svg#icon-vector"></use>
                             </svg>
@@ -47,12 +50,17 @@
                         </a>
                     </li>
                 </ul>
+
         </div>
     </header>
+
 <main>
+
     <section class="section">
         <div class="container">
+
         <h1 class="projects">Фильтры</h1>
+
             <ul class="projects-list list">
                 <li class="projects-item"><button type="button" class="button active-button current acсent-button">Все</button></li>
                 <li class="projects-item"><button type="button" class="button active-button">Веб-сайты</button></li>
@@ -60,6 +68,7 @@
                 <li class="projects-item"><button type="button" class="button active-button">Дизайн</button></li>
                 <li class="projects-item"><button type="button" class="button active-button">Маркетинг</button></li>
             </ul>
+
             <ul class="projects-navigation list">
                 <li class="projects-icons">
                     <a href="#" class="projects-element">
@@ -195,12 +204,17 @@
                         </div>
                     </a>
                 </li>
+
             </ul>
+
         </div>
     </section>
+
 </main>
+
 <footer class="footer">
     <div class="footer-container container">
+
         <div class="footer-left">
         <a href="./index.html" class="footer-logo link">Web<span class="studio-light">Studio</span></a>
             <address class="adress">
@@ -210,7 +224,8 @@
                     <li class="footer-item"><a href="telto:+380991111111" class="contacts-link link">+38 099 111 11 11</a></li>
                 </ul>
             </address>
-        </div>    
+        </div>  
+
         <div class="social">
             <p class="footer-social">Присоединяйтесь</p>
             <ul class="footer-social-list list">
@@ -248,6 +263,7 @@
                 </li>
             </ul>
         </div>
+
         <form class="form-sub" name="email" action="#">
             <p class="footer-social">Подпишитесь на рассылку</p>
             <div class="footer-sub">
@@ -263,7 +279,9 @@
                 </button>
             </div>
         </form>
+
     </div>
+    
 </footer>
 </body>
 </html>
